--- a/example/app.component.jade
+++ b/example/app.component.jade
@@ -1,1 +1,14 @@
-h1 App test
+.container
+	h1 Image cropper made easy
+
+	h2 Inline cropper
+	.row
+		.col-md-8.col-md-offset-2
+			image-cropper(imageUrl="./wallhaven-450488.png")
+
+	h2 Cropper form input
+
+	form.form(*ngIf="form", [formGroup]="form")
+		.form-group
+			label.control-label Image
+			input-image-crop(formControlName="image", [settings]="{ width: 600, height: 400 }")
