feat(cropper): add cropper option input

--- a/src/components/input-image-crop/image-cropper-modal/image-cropper-modal.component.jade
+++ b/src/components/input-image-crop/image-cropper-modal/image-cropper-modal.component.jade
@@ -9,7 +9,8 @@
 			[imageUrl]="context.imageUrl",
 			(export)="saveData($event)",
 			[settings]="context.settings",
-			[cropbox]="context.cropbox"
+			[cropbox]="context.cropbox",
+			[cropperOptions]="cropperOptions"
 		)
 	.modal-footer
 		button.btn.btn-default(
