--- a/example/app.component.jade
+++ b/example/app.component.jade
@@ -11,4 +11,6 @@
 	form.form(*ngIf="form", [formGroup]="form")
 		.form-group
 			label.control-label Image
-			input-image-crop(formControlName="image", [settings]="{ width: 600, height: 400 }", [cropperOptions]="{ viewMode: 0 }")
+			.row
+				.col-md-4.col-md-offset-4
+					input-image-crop(formControlName="image", [settings]="{ width: 600, height: 400 }", [cropperOptions]="{ viewMode: 0 }")
